# wasmd

./: Cargo.toml  README.md  buf.gen.yaml  justfile
api/v0/: runtime.proto
wasmd/: Cargo.toml
wasmd-proto/: Cargo.toml
wasmd-proto/src/: lib.rs
wasmd/src/: main.rs
wasmtime-shim/src/: main.rs
