[package]
name = "wasmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["rt-multi-thread", "signal"]}
tonic = "0.8.3"
wasmd-proto = { path = "../wasmd-proto" }
log = { workspace = true }
env_logger = { workspace = true }
